:construction: myanmar language.

--- a/Friday.ERP.Client/Pages/CustomerVendorManagement/Dialogs/CustomerVendorCreateDialog.razor
+++ b/Friday.ERP.Client/Pages/CustomerVendorManagement/Dialogs/CustomerVendorCreateDialog.razor
@@ -17,7 +17,7 @@
             </MudGrid>
             <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
             <MudGrid Spacing="2">
-                <CustomLabelAndLongField FirstText="ကျန်ငွေ/ပိုငွေ" @bind-BindValue="@TotalCreditDebit"/>
+                <CustomLabelAndLongField FirstText="အကြွေး/ပိုငွေ (ကျပ်)" @bind-BindValue="@TotalCreditDebit"/>
             </MudGrid>
             <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         </MudForm>
