--- a/Friday.ERP.Client/Pages/CustomerVendorManagement/Index.razor
+++ b/Friday.ERP.Client/Pages/CustomerVendorManagement/Index.razor
@@ -50,7 +50,7 @@
                                     <MudTh>ဖုန်း</MudTh>
                                     <MudTh>အီးမေးလ်</MudTh>
                                     <MudTh>နေရပ်</MudTh>
-                                    <MudTh>ကျန်ငွေ/ပိုငွေ</MudTh>
+                                    <MudTh>အကြွေး/ပိုငွေ (ကျပ်)</MudTh>
                                     <MudTh>-</MudTh>
                                 </HeaderContent>
                                 <RowTemplate>
@@ -113,7 +113,7 @@
                                     <MudTh>ဖုန်း</MudTh>
                                     <MudTh>အီးမေးလ်</MudTh>
                                     <MudTh>နေရပ်</MudTh>
-                                    <MudTh>ကျန်ငွေ/ပိုငွေ</MudTh>
+                                    <MudTh>အကြွေး/ပိုငွေ (ကျပ်)</MudTh>
                                     <MudTh>-</MudTh>
                                 </HeaderContent>
                                 <RowTemplate>
