--- a/Friday.ERP.Client/Pages/Invoice/Dialogs/TransactionDeliveryDialog.razor
+++ b/Friday.ERP.Client/Pages/Invoice/Dialogs/TransactionDeliveryDialog.razor
@@ -1,19 +1,19 @@
 ﻿<MudDialog>
     <DialogContent>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="လိပ်စာ" SecondText="@Address"/>
-            <CustomLabelAndLabel FirstText="ဆက်သွယ်ရန်" SecondText="@ContactPerson"/>
-            <CustomLabelAndLabel FirstText="ဆက်သွယ်ရန်ဖုန်း" SecondText="@ContactPhone"/>
+            <CustomLabelAndLabel FirstText="လိပ်စာ" SecondText="@Address" SecondTextAlign="Align.End"/>
+            <CustomLabelAndLabel FirstText="ဆက်သွယ်ရန်" SecondText="@ContactPerson" SecondTextAlign="Align.End"/>
+            <CustomLabelAndLabel FirstText="ဆက်သွယ်ရန်ဖုန်း" SecondText="@ContactPhone" SecondTextAlign="Align.End"/>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="ကားဂိတ်/delivery အမည်" SecondText="@DeliveryServiceName"/>
-            <CustomLabelAndLabel FirstText="ဆက်သွယ်ရန်" SecondText="@DeliveryContactPerson"/>
-            <CustomLabelAndLabel FirstText="ဆက်သွယ်ရန်ဖုန်း" SecondText="@DeliveryContactPhone"/>
+            <CustomLabelAndLabel FirstText="ကားဂိတ်/delivery အမည်" SecondText="@DeliveryServiceName" SecondTextAlign="Align.End"/>
+            <CustomLabelAndLabel FirstText="ဆက်သွယ်ရန်" SecondText="@DeliveryContactPerson" SecondTextAlign="Align.End"/>
+            <CustomLabelAndLabel FirstText="ဆက်သွယ်ရန်ဖုန်း" SecondText="@DeliveryContactPhone" SecondTextAlign="Align.End"/>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="မှတ်ချက်" SecondText="@Remark"/>
+            <CustomLabelAndLabel FirstText="မှတ်ချက်" SecondText="@Remark" SecondTextAlign="Align.End"/>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"/>
     </DialogContent>
