--- a/Friday.ERP.Client/Pages/Purchase/Components/Templates/CustomCardRectangle.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Components/Templates/CustomCardRectangle.razor
@@ -18,10 +18,10 @@
                 </div>
                 <div class="d-flex flex-column align-self-center">
                     <MudText Typo="Typo.body2">
-                        @SecondMainText mmk
+                        @SecondMainText
                     </MudText>
                     <MudText Typo="Typo.body2">
-                        <b>@SecondSubText mmk</b>
+                        <b>@SecondSubText</b>
                     </MudText>
                 </div>
             }
@@ -33,7 +33,7 @@
                             <b>@FirstMainText</b>
                         </MudText>
                         <MudText Typo="Typo.body2" Class="mt-2" Align="Align.Start">
-                            @FirstSubText mmk
+                            @FirstSubText
                         </MudText>
                     </div>
                 </div>
