--- a/Friday.ERP.Client/Pages/Inventory/Index.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Index.razor
@@ -7,7 +7,6 @@
 @using Friday.ERP.Client.Shared.Layouts
 @inject IHttpRepository HttpRepo
 @inject IDialogService DialogService
-@inject ISnackbar Snackbar
 
 @layout MainLayout
 @attribute [Authorize]
@@ -105,7 +104,7 @@
     async Task OpenCategoryCreateDialog()
     {
         var options = new DialogOptions();
-        var dialog = await DialogService.ShowAsync<InventoryCategoryDialog>("Create New Category", options);
+        var dialog = await DialogService.ShowAsync<InventoryCategoryDialog>("ပစ္စည်းအမျိုးအစားအသစ်ထည့်ရန်", options);
         var result = await dialog.Result;
         if (!result.Canceled)
         {
@@ -123,7 +122,7 @@
             { x => x.CategoryName, categoryViewDto.Name },
             { x => x.CategoryColor, categoryViewDto.Color }
         };
-        var dialog = await DialogService.ShowAsync<InventoryCategoryDialog>("Update Category", parameters, options);
+        var dialog = await DialogService.ShowAsync<InventoryCategoryDialog>("ပစ္စည်းအမျိုးအစားပြောင်းရန်", parameters, options);
         var result = await dialog.Result;
         if (!result.Canceled)
         {
@@ -189,11 +188,10 @@
     async Task OpenProductCreateDialog()
     {
         var options = new DialogOptions();
-        var dialog = await DialogService.ShowAsync<InventoryProductDialog>("Create New Product", options);
+        var dialog = await DialogService.ShowAsync<InventoryProductDialog>("ပစ္စည်းအသစ်ထည့်ရန်", options);
         var result = await dialog.Result;
         if (!result.Canceled)
         {
-            Snackbar.Add("Product Created!", Severity.Success);
             await GetProductData();
         }
     }
@@ -211,11 +209,10 @@
             { x => x.CategoryName, productViewDto.CategoryName }
         };
         var options = new DialogOptions();
-        var dialog = await DialogService.ShowAsync<InventoryProductDialog>("Update Product", parameters, options);
+        var dialog = await DialogService.ShowAsync<InventoryProductDialog>("ပစ္စည်းပြောင်းရန်", parameters, options);
         var result = await dialog.Result;
         if (!result.Canceled)
         {
-            Snackbar.Add("Product Updated!", Severity.Success);
             await GetProductData();
         }
     }
